Issue #13906: Slideshow spacing removed

--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -1114,6 +1114,10 @@ ul.tabs, .action-links,
         margin-bottom: 36px
       .front .page-basic-io &
         margin-bottom: 23px
+  .inner_right &
+    .pane-page-content &
+      .front .page-basic-io &
+        margin-bottom: 8px
 
 //Main heading style
 h2
